# libcbdetect

./: .gitignore  CMakeLists.txt
include/libcbdetect/: board_energy.h  boards_from_corners.h  config.h  create_correlation_patch.h  filter_board.h  filter_corners.h  find_corners.h  find_modes_meanshift.h  get_image_patch.h  get_init_location.h  grow_board.h  image_normalization_and_gradients.h  init_board.h  non_maximum_suppression.h  plot_boards.h  plot_corners.h  polynomial_fit.h  refine_corners.h  score_corners.h  weight_mask.h
src/: example.cc
src/libcbdetect/: board_energy.cc  boards_from_corners.cc  create_correlation_patch.cc  filter_board.cc  filter_corners.cc  find_corners.cc  find_modes_meanshift.cc  get_image_patch.cc  get_init_location.cc  grow_board.cc  image_normalization_and_gradients.cc  init_board.cc  non_maximum_suppression.cc  plot_boards.cc  plot_corners.cc  polynomial_fit.cc  refine_corners.cc  score_corners.cc  weight_mask.cc
